# kiwirust

./: .gitignore  Cargo.toml
src/: config.rs  error.rs  handler.rs  main.rs
src/commands/: animal.rs  backup.rs  help.rs  info.rs  mcskin.rs  member.rs  mod.rs  roletoggle.rs  run.rs  status.rs  todo.rs  whitelist.rs
src/database/migrations/: 20240301_init.sql
src/database/model/: member.rs  mod.rs  todo.rs
src/events/: interaction_create.rs  mod.rs  ready.rs
src/util/: builder.rs  discord.rs  format.rs  mod.rs  mojang.rs  pterodactyl.rs  random_utils.rs  rcon.rs
