[package]
name = "kiwirust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.1"
poise = "0.6.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "postgres",
    "time",
    "chrono",
] }
reqwest = { version = "0.12.2", features = ["json"] }
anyhow = "1.0.81"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4.37", features = ["serde"] }
