[package]
name = "kiwirust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.1", features = ["cache", "model"] }
poise = { version = "0.6.1", features = ["handle_panics"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "postgres",
    "time",
    "chrono",
    "uuid"
] }
reqwest = { version = "0.12.2", features = ["json"] }
rcon = { version = "0.6.0", features = ["rt-tokio"] }
anyhow = "1.0.81"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4.37", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde"] }
url = "2.5.0"
